--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@ Demo App
 
 {% block styles %}
 {{super()}}
-<link rel="stylesheet" href="{{url_for('.static', filename='starter-template.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='starter-template.css')}}">
 {% endblock %}
 
 {% block content %}
@@ -24,8 +24,8 @@ Demo App
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="{{ url_for('login') }}">Login</a></li>
-            <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
+            <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+            <li><a href="{{ url_for('auth.signup') }}">Sign Up</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
